# nordic_stage

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  biome.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
apps/api/: .dockerignore  Dockerfile  Makefile  manage.py  pyproject.toml
apps/api/accounts/: admin.py  models.py  services.py
apps/api/accounts/migrations/: 0001_initial.py  0002_profile.py
apps/api/accounts/tests/: test_admin.py  test_models.py  test_services.py
apps/api/config/: asgi.py  celery.py  urls.py  wsgi.py
apps/api/config/settings/: base.py  local.py  test.py
apps/api/core/: api.py  decorators.py  exceptions.py  middleware.py  mixins.py  models.py  selectors.py  services.py  tasks.py  tests.py  utils.py
apps/api/core/management/commands/: seed_db.py
apps/api/core/tests/: test_core_exceptions.py  test_core_middleware.py  test_core_models.py  test_core_services.py  test_core_tasks.py  test_wagtail_setup.py
apps/api/events/: admin.py  gateways.py  models.py  selectors.py  services.py
apps/api/events/migrations/: 0001_initial.py  0002_venue.py  0003_speaker.py  0004_session.py  0005_tag.py  0006_registration.py  0007_ticket.py  0008_waitlist.py  0009_order_paymentevent.py
apps/api/events/tests/: test_admin.py  test_event_managers.py  test_event_selectors.py  test_event_services.py  test_models.py  test_order_models.py  test_payment_event_models.py  test_registration_models.py  test_registration_selectors.py  test_registration_services.py  test_session_models.py  test_speaker_models.py  test_stripe_gateway.py  test_stripe_services.py  test_tag_models.py  test_ticket_models.py  test_venue_models.py  test_waitlist_models.py
apps/api/tests/: factories.py
apps/api/tests/core/: test_core_selectors.py  test_core_utils.py
apps/web/: .dockerignore  Dockerfile  package.json  vitest.config.ts
apps/web/tests/: page.test.tsx
docs/milestones/: README.md
docs/runbooks/: docker.md
infra/docker/: docker-compose.yml  nginx.conf
infra/scripts/: backup_db.sh  restore_db.sh
(+18 files in other folders)
